add swagger for upload
